--- a/food.css
+++ b/food.css
@@ -1,23 +1,11 @@
-
-
-*.simple {
-  width: 500px;
-  margin: 20px auto;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+body{
+  background-color: black;
 }
 
-.fancy {
-  width: 500px;
-  margin: 20px auto;
-  padding: 50px;
-  border: solid blue 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+p{
+  color: white;
 }
 
-.all{
-	margin: 0 auto;
+.tittle{
+  font-size: 48px;
 }
